--- a/index.html
+++ b/index.html
@@ -1,171 +1,1 @@
-<html>
-<head>
-<meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
-<style>
-.fade {
-  margin: 50px;
-  padding: 50px;
-  background-color: lightgreen;
-  opacity: 1;
-}
-.fade-in:hover {
-  animation-name: FadeIn;
-  animation-duration: 3s;
-  transition-timing-function: linear;
-}
-
-@keyframes FadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-moz-keyframes FadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes FadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-o-keyframes FadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-ms-keyframes FadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
- 
-
-
-
-
-</style>
-<link href="css/Scrollmenu.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-<body>
-
-
-
-
-<div class="mt-4 col-3 mx-auto">
-      <img class="img-fluid" src="img/icon.png" alt="...">
-	</div>
-<div class="row">
-<div class="col-md-8 mx-auto">
-
-  <input autofocus placeholder="search" class="form-control" type="text" autocomplete="off" name="search" id="search"/>
-
-  <ul class="list-group" id="list"></ul>
-
-    <script src="./main.js"></script>
-
-</div>
-</div>
-
-<div class="col-md-6 mt-5 mb-4 mx-auto">
-<nav id="navbar-example2" class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
-  <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
-<li class="nav-item">
-      <a class="nav-link" href="#fat">Listing</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#mdo">Contact</a>
-    </li>
-<li class="nav-item">
-      <a class="nav-link" href="#fat">Direction</a>
-    </li>
-<li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">A-Z</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#one">one</a>
-        <a class="dropdown-item" href="#two">two</a>
-        <div role="separator" class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#three">three</a>
-      </div>
-    </li>
-
-
-      </ul>
-</nav>
-
-
-
-
-
-<div style ="max-width:1500px" class="align-items-center container">
-
-  <div class = "container align-items-center " style="max-width: 2540px;">
-
-
-
-
-
-</div>
-<div style = "display: hidden" class="justify-content-center col-12  ">
-<div class="Scrollmenu1 hidden">
-  <a href="#A">A</a>
-  <a href="#B">B</a>
-  <a href="#C">C</a>
-  <a href="#D">D</a>
-  <a href="#E">E</a>
-  <a href="#F">F</a>
-  <a href="#G">G</a>
-  <a href="#H">H</a>
-  <a href="#I">I</a>
-  <a href="#J">J</a>
-  <a href="#K">K</a>
-  <a href="#L">L</a>
-  <a href="#M">M</a>
-  <a href="#N">N</a>
-  <a href="#O">O</a>
-  <a href="#P">P</a>
-  <a href="#Q">Q</a>
-  <a href="#R">R</a>
-  <a href="#S">S</a>
-  <a href="#T">T</a>
-  <a href="#U">U</a>
-  <a href="#V">V</a>
-  <a href="#W">W</a>
-  <a href="#X">X</a>
-  <a href="#Y">Y</a>
-  <a href="#Z">Z</a>
-</div>
-</div>
-</div>
-<footer class="mb-1">
-<p class="lead text-muted col-12 text-center">Copyright Indigo<br><img class="col-2" src="./img/dd.png" alt=""></p>
-</footer>
-
-
-
-</body>
-</html>
+<html><head>  <title>indigo</title><meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'><style>.fade {  margin: 50px;  padding: 50px;  background-color: lightgreen;  opacity: 1;}.fade-in:hover {  animation-name: FadeIn;  animation-duration: 3s;  transition-timing-function: linear;}@keyframes FadeIn {  0% {    opacity: 0;  }  100% {    opacity: 1;  }}@-moz-keyframes FadeIn {  0% {    opacity: 0;  }  100% {    opacity: 1;  }}@-webkit-keyframes FadeIn {  0% {    opacity: 0;  }  100% {    opacity: 1;  }}@-o-keyframes FadeIn {  0% {    opacity: 0;  }  100% {    opacity: 1;  }}@-ms-keyframes FadeIn {  0% {    opacity: 0;  }  100% {    opacity: 1;  }} </style><link href="css/Scrollmenu.css" rel="stylesheet"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script><link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" /><script src="https://code.jquery.com/jquery-1.11.1.min.js"></script><script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script></head><body></div><div class="border-0 bg-white" data-role="page">  <div class="border-0 bg-white" data-role="header">    <div class="mt-4 col-3 mx-auto">      <img class="img-fluid" src="img/icon.png" alt="...">	</div></div><div class="border-0 bg-white" data-role="main">  <div style ="max-width:1500px" class="align-items-center container">    <div class="col-md-6 mb-4 mx-auto">      <nav id="navbar-example2" class="navbar navbar-light bg-light">        <a class="navbar-brand" href="#"></a>        <ul class=" display list-inline mx-auto col-md-8  justify-content-center nav nav-pills">      <li class="nav-item">            <a class="nav-link" href="#fat">Listing</a>          </li>          <li class="nav-item">            <a class="nav-link" href="#mdo">Contact</a>          </li>      <li class="nav-item">            <a class="nav-link" href="#fat">Direction</a>          </li>      <li class="nav-item dropdown">            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">A-Z</a>            <div class="dropdown-menu">              <a class="dropdown-item" href="#one">one</a>              <a class="dropdown-item" href="#two">two</a>              <div role="separator" class="dropdown-divider"></div>              <a class="dropdown-item" href="#three">three</a>            </div>          </li>                        </ul>      </nav>    <div class = "container align-items-center " style="max-width: 2540px;">      <ul class = " border-0 align-items-center" data-filter-reveal ="true" data-role="listview" data-filter="true" data-filter-placeholder="Search">        <li class="border-0">    <div class="col-md-12">      <div class="card-body">        <h5 class="card-title">      <img class ="img-fluid col-2" src="img/icon.png" alt="...">    A & P INTERNATIONAL </h5><div class="row">        <p class="card-text col-6">we are willing and able to do the best in the year 2022 <br><br><small class="text-muted">with us less than a year</small></p><div class="col-5"><p class="card-text ">Address: Unit B1&B2 Leopards Hill Business Park</p><p class="card-text ">Phone: 0966999333 </p><p class="card-text ">Email: apiliv@iconnect.zm.</p></div></div>          </div>    </div></li><li class="border-0">    <div class="col-md-12">      <div class="card-body">        <h5 class="card-title">      <img class ="img-fluid col-2" src="img/icon.png" alt="...">    ALLEGORICAL INSTITUTE </h5><div class="row">        <p class="card-text col-6">we are willing and able to do the best in the year 2022 <br><br><small class="text-muted">with us less than a year</small></p><div class="col-5"><p class="card-text ">Address: Unit B1&B2 Leopards Hill Business Park</p><p class="card-text ">Phone: 0966999333 </p><p class="card-text ">Email: apiliv@iconnect.zm.</p></div></div>          </div>    </div></li><li class="border-0">dog</liclass="border-0"><li class="border-0">log</li><li class="border-0">fog</li><li class="border-0">bag</li><li class="py-3">drag</li><li class="border-0">bit</li><li class="border-0">sit</li><li class="border-0">wife</li>      </ul>    </div></div></div><div class="border-0 bg-white" data-role="footer">  <footer class="mb-1">    <p class="lead text-muted col-12 text-center">Copyright Indigo<br><img class="col-2" src="./img/dd.png" alt=""></p>    </footer>  </div>  </div></div></body></html>
