--- a/navigation/Direction.html
+++ b/navigation/Direction.html
@@ -45,13 +45,13 @@
         <a class="navbar-brand" href="#"></a>
         <ul class=" display list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="nav-item">
-            <a class="nav-link" href="navigation/Listing.html">Listing</a>
+            <a class="nav-link" href="/navigation/Listing.html">Listing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="navigation/Contact.html">Contact</a>
+            <a class="nav-link" href="/navigation/Contact.html">Contact</a>
           </li>
       <li class="nav-item">
-            <a class="nav-link" href="navigation/Direction.html">Direction</a>
+            <a class="nav-link" href="/navigation/Direction.html">Direction</a>
           </li>
         </ul>
       </nav>
