--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Indigo</title>
   <meta name="description" content="INDIGO: A Listing Search engine that lists local companies, organisations and institutions including ideas and facts to the Zambian local citizens. Enjoy using the informative descriptions and hopefully unquestionable facts">
-  <meta name="keywords" content="Zambia, Indigo, Zambian, Lusaka, Livingstone, Kitwe, Dundumwezi, Kamwala, Chongwe, Listing, HTML, CSS, JavaScript, Omicron,">
+  <meta name="keywords" content="Zambia, Indigo, indigoZamar2022, Zambian, Lusaka, Livingstone, Kitwe, Dundumwezi, Kamwala, Chongwe, Listing, HTML, CSS, JavaScript, Omicron,">
   <meta name="author" content="Stewards International Forum">
   
 <meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
