--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Indigo</title>
-  <meta name="description" content="INDIGO: A Listing Search engine that lists local companies, organisations and institutions including ideas and facts to the Zambian local citizens. Enjoy using the informative descriptions and hopefully unquestionable facts">
+  <meta name="description" content="INDIGO: A Listing Search engine that lists local companies, organisations and institutions including ideas and facts to the Zambian local citizens. Enjoy using the informative descriptions and hopefully unquestionable facts, Zambia, Indigo, indigoZamar2022, Zambian, Lusaka, Livingstone, Kitwe, Dundumwezi, Kamwala, Chongwe, Listing, HTML, CSS, JavaScript, Omicron,">
   <meta name="keywords" content="Zambia, Indigo, indigoZamar2022, Zambian, Lusaka, Livingstone, Kitwe, Dundumwezi, Kamwala, Chongwe, Listing, HTML, CSS, JavaScript, Omicron,">
   <meta name="author" content="Stewards International Forum">
   
