--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="border-0 bg-white" data-role="header">
     <div class="mt-4 col-lg-2 col-3 mx-auto">
     
-      <img class="" src="img/indigo.png" alt="...">
+      <img class="img-fluid" src="img/indigo.png" alt="...">
     </div>
   </div>
 
