--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-<div class="border-0 bg-white" data-role="main">
+<div class="border-0 bg-secondary" data-role="main">
 
   <div style ="max-width:1500px" class="align-items-center container">
     <div class="col-md-8 mb-4 mx-auto">
