--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 <body>
-<div class="border-0 bg-white" data-role="page">
+<div class="border-0 bg-secondary" data-role="page">
   <h1 class="text-light " style ="font-size:3px">Indigo Listing January 2022</h1>
   <div class="border-0 bg-white" data-role="header">
     <div class="mt-4 col-lg-2 col-3 mx-auto">
@@ -181,7 +181,7 @@ Phone: 0977225736<br>0966225736</p>
 </div>
 
 
-<div class="border-0 bg-white" data-role="footer">
+<div class="border-0 bg-secondary" data-role="footer">
 
   <footer class="mb-1">
     <p style="font-size: x-small;" class="lead text-muted col-12 text-center">Copyright Indigo<br><img style ="width: 40px;" class="col-2" src="./img/dd.png" alt=""></p>
