--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <div class="border-0 bg-secondary" data-role="page">
   <h1 class="text-light " style ="font-size:3px">Indigo Listing January 2022</h1>
-  <div class="border-0 bg-white" data-role="header">
+  <div class="border-0 bg-secondary" data-role="header">
     <div class="mt-4 col-lg-2 col-3 mx-auto">
     
       <img class="img-fluid" src="img/indigo.png" alt="...">
@@ -41,7 +41,7 @@
     <div class="col-md-8 mb-4 mx-auto">
 
 
-      <nav id="navbar-example2" class="navbar navbar-light bg-light">
+      <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
         <a class="navbar-brand" href="#"></a>
         <ul class=" display list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="nav-item">
