--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
         <a class="navbar-brand" href="#"></a>
-        <ul class=" display list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
+        <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="nav-item">
             <a class="nav-link text-light" href="navigation/Listing.html">Listing</a>
           </li>
