--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <a class="navbar-brand" href="#"></a>
         <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="nav-item">
-            <a class="nav-link text-light" href="navigation/Listing.html">Listing</a>
+            <a class="nav-link text-light lead text-muted" href="navigation/Listing.html">Listing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="navigation/Contact.html">Contact</a>
+            <a class="nav-link text-light lead text-muted" href="navigation/Contact.html">Contact</a>
           </li>
       <li class="nav-item">
-            <a class="nav-link text-light" href="navigation/Direction.html">Direction</a>
+            <a class="nav-link text-light lead " href="navigation/Direction.html">Direction</a>
           </li>
         </ul>
       </nav>
