--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a class="navbar-brand" href="#"></a>
         <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="nav-item">
-            <a class="nav-link text-light lead text-muted" href="navigation/Listing.html"><p style="font-size: x-small;" class="lead text-muted col-12 text-center">Listing</p></a>
+            <a class="nav-link text-light lead text-muted" href="navigation/Listing.html"><p style="font-size: small;" class="lead text-muted col-12 text-center">Listing</p></a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-light lead text-muted" href="navigation/Contact.html">Contact</a>
