--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
 
       <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
-        <a class="navbar-brand" href="#"></a>
+        <a class=" row navbar-brand" href="#"></a>
         <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="nav-item">
-            <a class="col-2 nav-link text-light lead text-muted" href="navigation/Listing.html"><img style ="" class="" src="./img/listing.svg" alt=""></a>
+            <a class="col-2 nav-link text-light lead text-muted" href="navigation/Listing.html"><img style ="" class="col-3" src="./img/listing.svg" alt=""></a>
           </li>
           <li class="nav-item">
             <a class=" col-2 nav-link text-light lead text-muted" href="navigation/Contact.html"><img style ="" class="" src="./img/contact.svg" alt=""></a>
