--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
       <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
         <a class=" row navbar-brand" href="#"></a>
         <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
-      <li class="nav-item">
+      <li class="col-2 nav-item">
             <a class="col-1 nav-link text-light lead text-muted" href="navigation/Listing.html"><img style ="max-width=100;" class="" src="./img/listing.svg" alt=""></a>
           </li>
-          <li class="nav-item">
-            <a class=" col-1 nav-link text-light lead text-muted" href="navigation/Contact.html"><img style ="max-width=100;" class="" src="./img/contact.svg" alt=""></a>
+          <li class="col-2 nav-item">
+            <a class=" col-1 nav-link text-light lead text-muted" href="navigation/Contact.html"><img  src="./img/contact.svg" alt=""></a>
           </li>
-      <li class="nav-item">
-            <a class="col-1 nav-link text-light lead " href="navigation/Direction.html"><img style ="max-width=100;" class="" src="./img/direction.svg" alt=""></a>
+      <li class="col-2 nav-item">
+            <a class="col-1 nav-link text-light lead " href="navigation/Direction.html"><img  src="./img/direction.svg" alt=""></a>
           </li>
         </ul>
       </nav>
