--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
       <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
         <a class=" row navbar-brand" href="#"></a>
-        <ul class=" list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
+        <ul class="row list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
       <li class="col-2 nav-item">
-            <a class="col-1 nav-link text-light lead text-muted" href="navigation/Listing.html"><img style ="max-width=100;" class="" src="./img/listing.svg" alt=""></a>
+            <a class="col-1 nav-link text-light lead text-muted" href="navigation/Listing.html"><img class="" src="./img/listing.svg" alt=""></a>
           </li>
           <li class="col-2 nav-item">
-            <a class=" col-1 nav-link text-light lead text-muted" href="navigation/Contact.html"><img  src="./img/contact.svg" alt=""></a>
+            <a class=" nav-link text-light lead text-muted" href="navigation/Contact.html"><img  src="./img/contact.svg" alt=""></a>
           </li>
       <li class="col-2 nav-item">
             <a class="col-1 nav-link text-light lead " href="navigation/Direction.html"><img  src="./img/direction.svg" alt=""></a>
