--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
         <a class="navbar-brand" href="#"></a>
-        <ul class="row list-inline mx-auto col-md-8  justify-content-center nav nav-pills">
+        <ul class="row list-inline mx-auto col-xs-8  justify-content-center nav nav-pills">
       <li class="col-2 nav-item">
             <a class="nav-link text-light lead " href="navigation/Listing.html"><img src="./img/listing.svg" alt=""></a>
           </li>
