--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         <a class="navbar-brand" href="#"></a>
         <ul class="row list-inline mx-auto col-xs-8  justify-content-center nav nav-pills">
       <li class="col-2 nav-item">
-            <a class="nav-link text-light lead " href="navigation/Listing.html"><img src="./img/listing.svg" alt=""></a>
+            <a class="nav-link text-light lead " href="navigation/Listing.html">Listing</a>
           </li>
           <li class="col-2 nav-item">
-            <a class=" nav-link text-light lead " href="navigation/Contact.html"><img  src="./img/contact.svg" alt=""></a>
+            <a class=" nav-link text-light lead " href="navigation/Contact.html">Contact</a>
           </li>
       <li class="col-2 nav-item">
-            <a class="nav-link text-light lead " href="navigation/Direction.html"><img  src="./img/direction.svg" alt=""></a>
+            <a class="nav-link text-light lead " href="navigation/Direction.html">Direction</a>
           </li>
         </ul>
       </nav>
