--- a/index.html
+++ b/index.html
@@ -41,20 +41,28 @@
     <div class="col-md-8 mb-4 mx-auto">
 
 
-      <nav id="navbar-example2" class="navbar navbar-light bg-secondary">
-        <a class="navbar-brand" href="#"></a>
-        <ul class="row list-inline mx-auto col-xs-8  justify-content-center nav nav-pills">
-      <li class="col-2 nav-item">
-            <a class="text-light fonx " href="navigation/Listing.html">Listing</a>
-          </li>
-          <li class="col-2 nav-item">
-            <a class="text-light fonx " href="navigation/Contact.html">Contact</a>
-          </li>
-      <li class="col-2 nav-item">
-            <a class="text-light fonx " href="navigation/Direction.html">Direction</a>
-          </li>
-        </ul>
-      </nav>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 
 
