--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a class="nav-link" href="#">Maps</a>
       </li>
         <li class="nav-item">
-        <a class="nav-link" href="#">Movies</a>
+        <a class="nav-link" href="#">T.V</a>
       </li>
         <li class="nav-item">
         <a class="nav-link" href="#">News</a>
