--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="col-md-8 mb-4 mx-auto">
 
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class=" navbar navbar-expand-lg navbar-secondary bg-secondary">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
