--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="text-secondary nav-item">
+      <li class="text-light nav-item">
         <a class="nav-link" href="#">Listing</a>
       </li>
-      <li class="text-secondary nav-item">
+      <li class="text-light nav-item">
         <a class="nav-link" href="#">Maps</a>
       </li>
-        <li class="text-secondary nav-item">
+        <li class="text-light nav-item">
         <a class="nav-link" href="#">T.V</a>
       </li>
-        <li class="text-secondary nav-item">
+        <li class="text-light nav-item">
         <a class="nav-link" href="#">News</a>
       </li>
-        <li class="text-secondary nav-item">
+        <li class="text-light nav-item">
         <a class="nav-link" href="#">Education</a>
       </li>
       <li class="nav-item">
