--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="text-light nav-link" href="#">Home <span class="sr-only">@e#&</span></a>
       </li>
-      <li class="text-light nav-item">
-        <a class="nav-link" href="#">Listing</a>
+      <li class=" nav-item">
+        <a class="text-light nav-link" href="#">Listing</a>
       </li>
-      <li class="text-light nav-item">
-        <a class="nav-link" href="#">Maps</a>
+      <li class=" nav-item">
+        <a class="text-light nav-link" href="#">Maps</a>
       </li>
-        <li class="text-light nav-item">
-        <a class="nav-link" href="#">T.V</a>
+        <li class=" nav-item">
+        <a class="text-light nav-link" href="#">T.V</a>
       </li>
-        <li class="text-light nav-item">
-        <a class="nav-link" href="#">News</a>
+        <li class=" nav-item">
+        <a class="text-lightnav-link" href="#">News</a>
       </li>
-        <li class="text-light nav-item">
-        <a class="nav-link" href="#">Education</a>
+        <li class=" nav-item">
+        <a class="text-lightnav-link" href="#">Education</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
