--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="text-light nav-link" href="#">Home <span class="sr-only">@e#&</span></a>
+        <a class="text-light nav-link" href="#">Home <span class="sr-only"></span></a>
       </li>
       <li class=" nav-item">
         <a class="text-light nav-link" href="#">Listing</a>
