--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         <a class="text-light nav-link" href="#">T.V</a>
       </li>
       <li class=" nav-item">
-        <a class="text-light nav-link" href="#">Maps</a>
+        <a class="text-light nav-link" href="#">Work</a>
       </li>
         <li class=" nav-item">
-        <a class="text-light nav-link" href="#">T.V</a>
+        <a class="text-light nav-link" href="#">Books</a>
       </li>
  
       
