--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="text-light nav-link" href="#">Home <span class="sr-only"></span></a>
+        <a class="text-light nav-link" href="#">News<span class="sr-only"></span></a>
       </li>
       <li class=" nav-item">
         <a class="text-light nav-link" href="#">Listing</a>
@@ -60,10 +60,7 @@
         <li class=" nav-item">
         <a class="text-light nav-link" href="#">T.V</a>
       </li>
-      <li class=" nav-item">
-        <a class="text-light nav-link" href="#">Work</a>
-      </li>
-        <li class=" nav-item">
+          <li class=" nav-item">
         <a class="text-light nav-link" href="#">Books</a>
       </li>
  
