--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Phone: 0977225736<br>0966225736</p>
 <div class="border-0 bg-secondary" data-role="footer">
 
   <footer class="mb-1">
-    <p style="font-size: x-small;" class="lead text-muted col-12 text-center">Copyright Indigo<br><img style ="width: 40px;" class="col-2" src="img/dd.png" alt=""></p>
+    <p style="font-size: x-small;" class="lead text-muted col-12 text-center">Copyright Indigo<br></p>
     </footer>  
 
 </div>
