--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="/jquery/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-<script src="/jquery/mobile/1.4.5/jquery-1.11.1.min.js"></script>
-<script src="/jquery/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" href="jquery/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="jquery/mobile/1.4.5/jquery-1.11.1.min.js"></script>
+<script src="jquery/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 
 
