--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="border-0 bg-transparent" data-role="header">
     <div class="p-3 mt-4 col-lg-3 col-3 mx-auto">
     
-      <img class="p-3 p-3 img-fluid" src="img/data integrity.svg" alt="...">
+      <img class="p-3 p-3 img-fluid" src="img/data integrity.svg" alt="digital integrity">
     </div>
   </div>
 
