--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="">
       <div class="card-body">
         <h5 class=" card-title">
-      <embed src="img/clients/AGS.svg" style="auto; height:100%" type="image/svg+xml"></embed></h5>
+      <embed src="img/clients/ags.svg" style="auto; height:100%" type="image/svg+xml"></embed></h5>
 <div class="row">
         <p hidden class=" card-text col-6"><br><br><small class="text-muted">ags</small></p>
 <div class="col-5">
@@ -108,7 +108,7 @@ Phone: 0966999333 </p>
     <div class="py-0 ">
       <div class="py-0 card-body">
         <h5 class=" py-0 card-title">
-      <embed src="img/clients/AGS.svg" style="auto; height:100%" type="image/svg+xml"></embed></h5>
+      <embed src="img/clients/ags.svg" style="auto; height:100%" type="image/svg+xml"></embed></h5>
 <div class="row">
         <p hidden class=" card-text col-6"><br><br><small class="text-muted">ags</small></p>
 <div class="col-5">
